--- a/about me/index.html
+++ b/about me/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>About Me</h1>
-    <img alt="Image of me?" src="C:\Users\Lenovo\Pictures\debbie.jpeg" >
+    <img alt="Image of me" src="WIN_20230616_01_07_04_Pro.gpg" >
 
     <h2>Deborah Niwemugeni</h2>
     <h3>(Debbie)</h3>
