--- a/about-me/index.html
+++ b/about-me/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>About Me</h1>
-    <img alt="Image of me" src="WIN_20230616_01_07_04_Pro.gpg" >
+    <img alt="Image of me" src="image/profile.jpg" >
 
     <h2>Deborah Niwemugeni</h2>
     <h3>(Debbie)</h3>
