--- a/psp/site-plan.html
+++ b/psp/site-plan.html
@@ -4,14 +4,18 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
+  <meta name="description" content="This is the site plan that has the Page2">
+  <meta name="author" content="Niwemugeni Deborah">
+  <link rel="stylesheet" href="styles/site-plan.css">
+
 </head>
 
 <body>
   <header>
-    <h1>Rafting Site Plan</h1>
+    <h1>Site Plan</h1>
     <h2>Niwemugeni Deborah</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -21,14 +25,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To having water is a great way to spend the day pushing your body, without even thinking about what it does help for your body.
-      Drinking water can help you push your body and get an upper-body workout and workout, all while enjoying every moment. </p>
+    <p>The land that gave birth to us is the land of a thousand mountains. Visit Rwanda. </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>It is related to a person's level of personal, intellectual, emotional, and social development.
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters.
+    <p>Rwanda is ranked as the second easiest place to do business in Africa by the World Bank and has been awarded for its leadership in tourism and economic competitiveness by the World Travel and Tourism Council (WTTC) and the World Economic Forum respectively.
     </p>
     <!-- change this -->
 
@@ -36,7 +37,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/resources/images/rafting59_600.jpg" alt="Logo image" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Flag_of_Rwanda.svg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -46,18 +47,13 @@
     
 
     <table class="colors">
-      <tr>
-        <th>Primary</th>
-        <th>Secondary</th>
-        <th>Accent 1</th>
-        <th>Accent 2</th>
-      </tr>
+      
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#71B8D5]</td>
-        <td class="secondary">[#395B65]</td>
-        <td class="accent1">[#bf8314]</td>
-        <td class="accent2">[#fc9201]</td>
+        <td class="primary">[#00c5df]</td>
+        <td class="secondary">[#36d0ec]</td>
+        <td class="accent1">[#46ddff]</td>
+        <td class="accent2">[#3db2ff]</td>
       </tr>
     </table>
 
@@ -67,11 +63,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Source Serif Pro
+      Heading Font: Architects Daughter
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font: Belanosima
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
@@ -94,8 +90,8 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">Page2</a>
+      <a href="home-siteplan.html">Home</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact Us</a>
     </nav>
 
