Add more HTML and CSS

--- a/psp/contact.html
+++ b/psp/contact.html
@@ -10,13 +10,17 @@
     <link rel="stylesheet" href="styles/contact.css">
   </head>
   <body>
-    <header class="grid">
-       <nav class="box">
+    <header>
+      <a id="logo_link" href="index.html">
+        <img class="logo" src="https://thumbs.dreamstime.com/z/rwanda-country-flag-inside-map-contour-design-icon-logo-border-suitable-138738773.jpg?w=992" alt="Rwanda Logo" />
+      </a>
+       <nav>
           <a href="index.html">Home</a>
-          <a href="trips.html">Trips</a>
           <a href="about.html">About</a>
-          <a href="contact.html">contact</a>
-       </nav>        
+          <a href="trips.html">Trips</a>
+          <a href="contact.html">Contact Us</a>
+       </nav> 
+    </header>          
   
   
   
