--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>River | Whitewater Rafting Vacations </title>
-    <link type="text/css" rel="stylesheet" href="style/river.css" />
+    <link type="text/css" rel="stylesheet" href="style/river.css">
 </head>
 <body>
     <header>
@@ -26,14 +26,14 @@
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
-            <div a class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
+            <div a class="button-box">
+                <a class="book" href="contactus.html">Book Now</a>
             </div>
         </section>
     </div>
     <main class="home-grid">
         
-        <div id="background"></div>
+        
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" >
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" >
         <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" >
