--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Site Plan</title>
+  <title>Whitewater Rafting Vacations</title>
   <link type="text/css" rel="stylesheet" href="style/site-plan-rafting.css" />
 </head>
 
