Add map site plan

--- a/psp/contact.html
+++ b/psp/contact.html
@@ -22,7 +22,13 @@
        </nav> 
     </header>          
   
-  
+    <p> site plan</p>
+    <p>Adress: Kigali-kagugu</p>
+    <p>Phone: +250791350770</p>
+    <p>Email: niwemugenideborah@gmail.com</p>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15950.429811048662!2d30.06867703861178!3d-1.9074909777487106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca1685aa7b38b%3A0xd979706d63ac7f9a!2sKagugu%2C%20Kigali!5e0!3m2!1sen!2srw!4v1679565233472!5m2!1sen!2srw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   
   <div class="container">
     <h2>Send Us Message</h2>
@@ -49,7 +55,7 @@
       <label for="subject">Subject</label>
       <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
   
-      <input type="submit" value="Submit">
+      <input type="submit"value="Submit" >
     </form>
   </div>
   
