--- a/psp/contact.html
+++ b/psp/contact.html
@@ -58,7 +58,20 @@
       <input type="submit"value="Submit" >
     </form>
   </div>
-  
+  <footer>
+    <a href="contact.html">Contact Us</a>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img class="fb" src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com">
+            <img class="fb" src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com">
+            <img class="fb" src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+ </footer> 
   </body>
   </html>
   
